syntax = "proto3";

package calculator;
option go_package="./calculator/calculatorpb";

message Sum {
    int64 a = 1;
    int64 b = 2;
}

message SumRequest {
    Sum input = 1;
}

message SumResponse {
    int64 result = 1;
}

message NumberDecompositionRequest {
    int64 value = 1;
}

message NumberDecompositionResponse {
    int64 primeNumber = 1;
}

service SumService{
    // rpc
    rpc Sum(SumRequest) returns (SumResponse) {};

    rpc NumberDecomposition(NumberDecompositionRequest) returns (stream NumberDecompositionResponse) {};
}
